--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
